fixed spacing issue and added in font awesome

--- a/src/components/holidayInput.css
+++ b/src/components/holidayInput.css
@@ -29,6 +29,10 @@
     margin-inline-end: 11px;
 }
 
+.holidayDateInput {
+    margin-right:8px;
+}
+
 #holidayHeaderContainer {
     margin: 20px;
 }
